# django-security-label

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.md  README.md  data.json  mkdocs.yml  pyproject.toml  tox.ini
.github/: dependabot.yml
.github/workflows/: release.yml  test_release.yml  tests.yml  zizmor.yml
docs/: contribute.md  contributing.md  gen_ref_pages.py  index.md  installation.md  usage.md
docs/explanation/: how-dynamic-masking-works.md  overview.md
docs/how-to-guides/: customizing-masked-reads.md  group-based-masking.md  masking-functions.md
docs/tutorials/: getting-started.md  run-the-example.md
example/: manage.py  settings.py
example/core/: admin.py  apps.py  models.py
example/core/management/commands/: setup_data.py
example/core/migrations/: 0001_initial.py
example/testapp/: admin.py  apps.py  models.py
example/testapp/migrations/: 0001_initial.py
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_8b8be8568e2968da_0001_initial_py.html  z_a44f0ac069e85531_test_create_anonymizer_policies_py.html  z_a44f0ac069e85531_test_setup_policies_py.html  z_a44f0ac069e85531_test_setup_roles_py.html  z_ab6593581742e775_middleware_py.html  z_d0396e45f1473391_apps_py.html
src/django_security_label/: __init__.py  apps.py  compat.py  constants.py  labels.py  middleware.py  operations.py
src/django_security_label/management/commands/: create_anonymizer_policies.py  setup_policies.py  setup_roles.py
src/django_security_label/migrations/: 0001_initial.py
tests/: compat.py  settings.py  test_create_anonymizer_policies.py  test_labels.py  test_makemigrations.py  test_middleware.py  test_operations.py  test_setup_policies.py  test_setup_roles.py  test_sqlmigrate.py  utils.py
tests/testapp/: middleware.py  models.py
tests/testapp/migrations/: 0001_initial.py
