[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "django-security-label"
dynamic = ["version"]
description = "Django support for PostgreSQL security labels"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Your Name", email = "you@example.com" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = ["Django>=4.2", "psycopg"]

[project.urls]
Homepage = "https://github.com/yourusername/django-security-label"
Repository = "https://github.com/yourusername/django-security-label"

[tool.setuptools.dynamic]
version = { attr = "django_security_label.__version__" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
pythonpath = ["src", "."]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest",
    "pytest-django",
    "pytest-randomly",
    "tox",
    "tox-uv",
    "psycopg[binary]",
]
docs = [
    "mkdocs",
    "mkdocs-material",
]
django42 = [ "django>=4.2a1,<5; python_version>='3.8'" ]
django50 = [ "django>=5a1,<5.1; python_version>='3.10'" ]
django51 = [ "django>=5.1a1,<5.2; python_version>='3.10'" ]
django52 = [ "django>=5.2a1,<6; python_version>='3.10'" ]
django60 = [ "django>=6a1,<6.1; python_version>='3.12'" ]

[tool.uv]
conflicts = [
  [
    { group = "django42" },
    { group = "django50" },
    { group = "django51" },
    { group = "django52" },
    { group = "django60" },
  ],
]
